--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,7 @@ httpx>=0.27.0
 rapidfuzz>=3.6.1
 PyYAML>=6.0.1
 python-dateutil>=2.9.0
+jpholiday>=0.1.8
 streamlit>=1.38.0
 pandas>=2.2.0
+yfinance>=0.2.52
